--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
 
     <header>
-
+        <div class="header-text">
+            <h1>SUPER EASY FRUIT SMOOTHIE RECIPES</h1>
+            <a href="#">First button</a>
+            <a href="#">Second button</a>
+        </div>
+        
     </header>
     
 
