header text, buttons - hover

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <div class="header-text">
             <h1>SUPER EASY FRUIT SMOOTHIE RECIPES</h1>
-            <a href="#">First button</a>
-            <a href="#">Second button</a>
+            <a href="#" class="btn btn-full">First button</a>
+            <a href="#" class="btn btn-empty">Second button</a>
         </div>
         
     </header>
