main - section info

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="col span-1-of-2">
                     <h2>gfsgfsfds</h2>
-                    <img src="Images/10.jpg" alt="">
+                    <img src="Images/8.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -67,25 +67,25 @@
 
             <div class="smoothie-info">
                 <div class="col span-1-of-2">
-                    <img src="Images/10.jpg" alt="">
+                    <img src="Images/9.jpg" alt="">
                 </div>
 
                 <div class="col span-1-of-2">
-                    <div class="text-smoothie">
+                    <div class="text-smoothie clearfix">
                         <div>1</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quia eaque recusandae impedit magni? Atque, dolore voluptatem quia explicabo, minima numquam repellat sapiente cum soluta praesentium, ab ullam veniam magni!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur asapiente cum soluta praesentium, ab ullam veniam magni!</p>
                     </div>
-                    <div class="text-smoothie">
+                    <div class="text-smoothie clearfix">
                         <div>2</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quia eaque recusandae impedit magni? Atque, dolore voluptatem quia explicabo, minima numquam repellat sapiente cum soluta praesentium, ab ullam veniam magni!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quia eaque recusandae impedit magni? </p>
                     </div>
-                    <div class="text-smoothie">
+                    <div class="text-smoothie clearfix">
                         <div>3</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quia eaque recusandae impedit magni? Atque, dolore voluptatem quia explicabo, minima numquam repellat sapiente cum soluta praesentium, ab ullam veniam magni!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur  soluta praesentium, ab ullam veniam magni!</p>
                     </div>
-                    <div class="text-smoothie">
+                    <div class="text-smoothie clearfix">
                         <div>4</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quia eaque recusandae impedit magni? Atque, dolore voluptatem quia explicabo, minima numquam repellat sapiente cum soluta praesentium, ab ullam veniam magni!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing dae at sapiente cum soluta praesentium, ab ullam veniam magni!</p>
                     </div>
                 </div>
             </div>
