--- a/index.html
+++ b/index.html
@@ -48,12 +48,10 @@
 
             <div class="smoothie-example">
                 <div class="col span-1-of-2">
-                    <h2>gdfsgfsgd</h2>
                     <img src="Images/10.jpg" alt="">
                 </div>
 
                 <div class="col span-1-of-2">
-                    <h2>gfsgfsfds</h2>
                     <img src="Images/8.jpg" alt="">
                 </div>
             </div>
@@ -91,17 +89,45 @@
             </div>
         </section>
 
-        <section class="references">
+        <section class="reference">
+
             <div class="heading-main">
                 <h2>References</h2>
             </div>
+
+            <div class="customer-reference row">
+              <div class="col span-1-of-3 one-reference">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis quam ullam mollitia assumenda illo sunt nisi officia doloribus dignissimos dolorum asperiores error nulla nam, sit aliquam obcaecati sint sequi.</p>
+
+                  <div class="photo-name">
+                    <img src="Images/21.png" alt="" class="clearfix">
+                    <p>Mirka</p>
+                  </div>
+
+              </div>
+
+              <div class="col span-1-of-3 one-reference">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis quam ullam mollitia assumenda illo sunt nisi officia doloribus dignissimos dolorum asperiores error nulla nam, sit aliquam obcaecati sint sequi.</p>
+
+                <div class="photo-name">
+                    <img src="Images/21.png" alt="" class="clearfix">
+                    <p>Josef</p>
+                  </div>
+            </div>
+
+            <div class="col span-1-of-3 one-reference">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis quam ullam mollitia assumenda illo sunt nisi officia doloribus dignissimos dolorum asperiores error nulla nam, sit aliquam obcaecati sint sequi.</p>
+
+                <div class="photo-name">
+                    <img src="Images/21.png" alt="" class="clearfix">
+                    <p>Radka</p>
+                  </div>
+            </div>
+            </div>
+
         </section>
 
-
-        
-
     </main>
-
 
     <footer>
 
