--- a/index.html
+++ b/index.html
@@ -127,6 +127,43 @@
 
         </section>
 
+
+        <section class="photo-gallery">
+            <div class="heading-main">
+                <h2>Photogallery</h2>
+            </div>
+
+            <div class="photos row">
+                <ul class="photo-segment">
+                    <li class="col span-1-of-2"><img src="Images/7.jpg" alt=""></li>
+                    <li class="col span-1-of-2"><img src="Images/6.jpg" alt=""></li>
+                </ul>
+
+                <ul class="photo-segment">
+                    <li class="col span-1-of-2"><img src="Images/38.jpg" alt=""></li>
+                    <li class="col span-1-of-2"><img src="Images/37.jpg" alt=""></li>
+                </ul>
+
+                <ul class="photo-segment">
+                    <li class="col span-1-of-2"><img src="Images/36.jpg" alt=""></li>
+                    <li class="col span-1-of-2"><img src="Images/41.jpg" alt=""></li>
+                </ul>
+
+            </div>
+
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
     </main>
 
     <footer>
