--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/lightbox.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="Others/grid.css">
+    <script src="js/lightbox-plus-jquery.min.js"></script>
 </head>
 <body>
 
@@ -138,6 +140,7 @@
                     <li class="col span-1-of-2"><img src="Images/7.jpg" alt=""></li>
                     <li class="col span-1-of-2"><img src="Images/6.jpg" alt=""></li>
                 </ul>
+               
 
                 <ul class="photo-segment">
                     <li class="col span-1-of-2"><img src="Images/38.jpg" alt=""></li>
