--- a/index.html
+++ b/index.html
@@ -154,7 +154,20 @@
 
             </div>
 
+        </section>
 
+        <section>
+            <div class="heading-main">
+                <h2>Contact us</h2>
+            </div>
+
+            <form action="" class="contact-form row">
+                <input type="text" placeholder="Firstname"><br>
+                <input type="text" placeholder="Secondname"><br>
+                <input type="mail" placeholder="Email"><br>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea><br>
+                <input type="submit" value="Odeslat">
+            </form>
 
         </section>
 
