--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/png" href="Images/favicona3.png">
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="Others/grid.css">
@@ -172,17 +173,24 @@
         </section>
 
 
-
-
-
-
-
-
-
-
     </main>
 
-    <footer>
+    <footer class="footer-page">
+
+        <div class="row">
+
+            <div class="social">
+                <p><a href="https://www.facebook.com/" target="_blank"><img src="Images/fb1.png" alt=""></a></p>
+                <p><a href="https://www.instagram.com/" target="_blank"><img src="Images/ig4.png" alt=""></a></p>
+            </div>
+            
+
+            <div class="footer-text">
+                Copywrite &copy; 2022 Radka Krenova
+            </div>
+
+        </div>
+    
 
     </footer>
 
