--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link rel="icon" type="image/png" href="Images/favicona3.png">
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/querries.css">
     <link rel="stylesheet" href="Others/grid.css">
     <script src="js/lightbox-plus-jquery.min.js"></script>
+
+
+    <script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+
+  <script src="js/script.js"></script>
+
 </head>
 <body>
 
