--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
                 <h2>Photogallery</h2>
             </div>
 
+            <!-- NORMAL GALLERY -->
+
             <!-- <div class="photos row">
                 <ul class="photo-segment">
                     <li class="col span-1-of-2"><img src="Images/7.jpg" alt=""></li>
